# BinaryContainer

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  test.cpp
.github/workflows/: cmake.yml
src/: binary_container.h  binary_row.cpp  random.h
tests/: CMakeLists.txt  container.cpp  container_align.cpp  container_avx.cpp  container_cmp.cpp  example.h  test.h
